# nanji

./: Cargo.toml  README.md  install.sh
src/: cli.rs  config.rs  main.rs
src/commands/: base.rs  dallas.rs  mod.rs  show.rs  tokyo.rs
tests/: nanji_cli.rs
