[package]
name = "nanji"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
colored = "3.0.0"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

