[package]
name = "nanji"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
jiff-tzdb = "0.1"
colored = "3.0.0"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

